# opensesame

./: Cargo.toml  README.md  TODO.md  book.toml
.cargo/: config.toml
.reuse/: dep5
ansible/: inventory.yaml  playbook.yaml  run.sh
ansible/dev-setup/: opensesame_dev_setup_inv.yaml  opensesame_dev_setup_pb.yaml  run.sh
arduino/read_analog_input_sketch_aug03a/: read_analog_input_sketch_aug03a.ino
debian/: postinst  postrm  service
doc/: Ansible.md  Audio.md  Battery.md  Benchmark.md  ClimaSensorUS.md  Debugging.md  DevelopmentSetup.md  Emulating-Olimex.md  Energy.md  Environment.md  GPIO.md  Garage.md  Haustüre.md  I2C.md  IRTemp.md  Install.md  MQ135.md  ModIR.md  Modules_Overview.md  Nextcloud.md  Opensensemap.md  Ping.md  Requirements.md  SUMMARY.md  Signals.md  Testreport_Async_Refactor.md  Translations.md  Troubleshooting.md  Types.md  Validator.md  Watchdog.md  Wetterstation.md  goodwe-inverter.md  libmodbus-troubles.md  modbus_communication_ideas.md  modules.md  thiesclima-weatherstation.md
doc/images/: information_flow_v0.8.0.drawio
doc/usecases/assigned/: event_loop_main.md  low_battery_warning.md  nextcloud_talk.md  public_publishing_of_data_for_anyone_interested.md  public_publishing_of_weather_data.md  warn_on_indoor_temperatures.md
doc/usecases/done/: public_publishing_of_weather_data.md
doc/usecases/draft/: low_battery_warning.md  on_battery_low_battery_warning_via_nextcloud.md  warn_alarm_on_indoor_temperatures.md
doc/usecases/unassigned/: mock_without_hardware.md
files/: 91-gpio.rules  i2c_2_clock_freq_6000_overlay.dtbo  i2c_2_clock_freq_overlay.dtbo  i2c_2_overlay.dts  opensesame.mo  opensesame.spec  opensesame.state.spec  reload-opensesame  trigger-watchdog
files/emu_dev/: emulate.sh  payload.sh
lang/: de_AT.po  de_AT.po~  opensesame.pot
scripts/jenkins/: Dockerfile  Dockerfile_cross  Jenkinsfile
src/: audio.rs  bat.rs  buttons.rs  clima_sensor_us.rs  config.rs  count_errors.rs  environment.rs  garage.rs  haustuer.rs  lib.rs  main.rs  mod_ir_temp.rs  nextcloud.rs  ping.rs  pwr.rs  rst.rs  sensors.rs  signals.rs  ssh.rs  todo  tokio-experiments.rs  types.rs  validator.rs  watchdog.rs
src/goodwe-inverter/: connection.c
src/nextcloud/: command_list.txt  commands.rs  mod.rs  nextcloud.rs
src/pv_anlage/: connection.c
src/weather_station/: Makefile  clima_sensor_us.rs  connection.c  connection_ascii.rs  connection_modbus.rs  dump_all_regs.rs  main.rs  write_to_reg.rs
