[package]
name = "opensesame"
version = "0.7.9"
authors = ["Opensesame Contributors"]
edition = "2018"
readme = "README.md"
license = "BSD"
description  = "Awesome home automation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



# https://github.com/kornelski/cargo-deb
[package.metadata.deb]
maintainer="Opensesame Contributors <opensesame@libelektra.org>"
copyright="BSD"
maintainer-scripts = "debian/"
systemd-units = { enable = true }
pre-depends = "elektra-bin, libelektra5, libelektra5-extra, libelektra5-experimental, libelektra5-python"

assets = [
    ["target/release/opensesame", "usr/bin/", "755"],
    ["files/reload-opensesame", "usr/bin/", "755"],
    ["files/trigger-watchdog", "usr/bin/", "755"],

    ["files/opensesame.spec", "usr/share/elektra/specification/", "644"],
    ["files/opensesame.state.spec", "usr/share/elektra/specification/", "644"],

    ["files/opensesame.mo", "usr/share/locale/de/LC_MESSAGES/", "644"],

    ["files/i2c_2_clock_freq_6000_overlay.dtbo", "usr/lib/olinuxino-overlays/sun7i-a20/", "644"],
    ["files/91-gpio.rules", "etc/udev/rules.d/", "644"],
    ["files/alarm.ogg", "usr/share/sounds/opensesame/", "644"],
    ["README.md", "usr/share/doc/opensesame/README.md", "644"],
    ["doc/*", "usr/share/doc/opensesame/", "644"],
]


[dependencies]
gpio-cdev = { version = "0.5.1", features = ["async-tokio"]}

i2cdev = "0.5.1"

elektra = { version = "0.11.0", features = ["pkg-config"] }

reqwest = "0.9.24"

bme280 = "0.3.0"
linux-embedded-hal = { version = "0.3", features = ["gpio_cdev"] }

systemstat = "0.1.11"

ssh2 = "0.9.3"
chrono = "0.4.19"

signal-hook = "0.3.14"
signal-hook-tokio = "0.3.1"

tokio = { version = "1.15.0", features = ["full"] }
futures = "0.3.19"

gettext-rs = "0.7.0"

serial_test = "0.4.0" # TODO, remove when issues.libelektra.org/4466 is fixed

sunrise = "1.0.0"

libmodbus = {git = "https://github.com/ElektraInitiative/libmodbus-rs.git"} 

[[bin]]
name = "weatherstation_dump"
path = "src/weather_station/dump_all_regs.rs"
